# watch-user-systemd-units

./: .gitignore  LICENSE.txt  README.md  config.ini  pyproject.toml  systemd_unit_monitor.py
.github/workflows/: build-and-release.yml
tests/: __init__.py  conftest.py  test_config.py  test_dbus_integration.py  test_filtering.py  test_metrics.py
